[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies.wgpu]
version = "0"
default-features = false

[dependencies.cgmath]
version = "0"
default-features = false

[dependencies.winit]
version = "0"
default-features = false

[dependencies.futures-lite]
version = "1"
default-features = false
features = ["std"]

[dependencies.bytemuck]
version = "1"
default-features = false

[dependencies.noise]
version = "0"
default-features = false